--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
                                              android:id="@+id/container"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context=".MainActivity"
-                                                android:background="@color/colorSpearmint">
+                                             tools:context=".MainActivity">
     <LinearLayout
             android:gravity="center_vertical"
             android:layout_width="0dp"
