--- a/app/src/main/res/layout/job_post_row.xml
+++ b/app/src/main/res/layout/job_post_row.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
     <ImageView
@@ -11,10 +10,13 @@
             android:layout_height="178dp"
             android:src="@drawable/rectangle"
             app:layout_constraintTop_toTopOf="parent"
-
-            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp"/>
 
     <TextView
             android:layout_margin="20dp"
@@ -23,7 +25,7 @@
             android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Job Title"
+            android:text="@string/job_title"
             android:textColor="#FFFFFF"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="@+id/btn_capture_photo" android:layout_marginStart="8dp"
@@ -32,7 +34,7 @@
             android:id="@+id/tvAuthor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Author"
+            android:text="@string/author"
             android:textColor="#FFFFFF"
             app:layout_constraintTop_toBottomOf="@+id/tvJobTitle"
             app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="20dp"
@@ -42,7 +44,7 @@
             android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="JobDescription"
+            android:text="@string/job_details"
             android:textColor="#FFFFFF"
             app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
             app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="20dp"
@@ -50,11 +52,34 @@
 
     <TextView
             android:id="@+id/tvJobPay"
-            android:text="$40/HR"
+            android:text="@string/pay_amt"
             android:textColor="#FFFFFF"
             android:layout_width="62dp"
             android:layout_height="26dp"
-            app:layout_constraintStart_toEndOf="@+id/tvJobTitle"
-            android:layout_marginLeft="164dp" android:layout_marginStart="164dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="@+id/btn_capture_photo"/>
+            android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
+            app:layout_constraintStart_toStartOf="@+id/tvDescription"/>
+
+    <Button
+            android:id="@+id/btnJobDetail"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:background="@drawable/btn_default"
+            android:text="@string/detail"
+            style="@style/button_default"
+
+
+            app:layout_constraintEnd_toStartOf="@+id/ivJobPostRowImg"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_capture_photo"/>
+
+    <ImageView
+            android:id="@+id/ivJobPostRowImg"
+            android:layout_width="89dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@+id/btn_capture_photo"
+            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_capture_photo"/>
 </android.support.constraint.ConstraintLayout>
