--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                             android:background="@color/colorSpearmint">
@@ -20,7 +19,6 @@
             android:layout_marginRight="8dp"/>
 
     <ImageView
-            android:contentDescription=""
             android:id="@+id/bgSquare"
             android:layout_width="348dp"
             android:layout_height="264dp"
@@ -49,7 +47,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:text="username@gmail.com"
+            android:text="eddyvarela83@gmail.com"
             android:id="@+id/etEmail"
             android:hint="Email Address" android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="@+id/bgSquare"
@@ -68,7 +66,7 @@
             android:ems="10"
             android:id="@+id/etPassword"
             android:hint="Password"
-            android:text="123456"
+            android:text="varela1297"
             android:layout_marginTop="8dp"
 
             android:layout_marginLeft="80dp"
