--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -51,7 +51,7 @@
                app:layout_constraintEnd_toStartOf="@+id/etPasswordRegister"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"
-               android:layout_marginTop="8dp"/>
+               android:layout_marginTop="8dp" android:id="@+id/imageView5"/>
 
     <TextView
             android:text="@string/greeting"
@@ -72,64 +72,77 @@
     <EditText
             android:id="@+id/etFirstNameRegister"
 
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:hint="@string/first_name"
             android:layout_marginTop="16dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
             app:layout_constraintTop_toTopOf="@id/btn_capture_photo"
-            tools:layout_editor_absoluteX="80dp"/>
+            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
     <EditText
             android:id="@+id/etLastNameRegister"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:hint="@string/last_name"
             android:layout_marginTop="8dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
             app:layout_constraintTop_toBottomOf="@+id/etFirstNameRegister"
-            tools:layout_editor_absoluteX="20dp"/>
+            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+            android:layout_marginLeft="48dp" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
+            android:layout_marginRight="48dp" app:layout_constraintHorizontal_bias="0.4"/>
     <EditText
             android:id="@+id/etEmailRegister"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
             android:hint="@string/email_address"
-            tools:layout_editor_absoluteX="20dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
-            app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
+            android:layout_marginTop="52dp"
+            app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
+
+    <EditText
+            android:id="@+id/etUserName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="8"
+            android:hint="Username"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etLastNameRegister"/>
+
+
     <EditText
             android:id="@+id/etPasswordRegister"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            app:layout_constraintEnd_toEndOf="parent"
             android:hint="@string/password"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
-            app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"/>
+            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etEmailRegister"/>
     <EditText
             android:id="@+id/etVerifyRegister"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            app:layout_constraintEnd_toEndOf="parent"
             android:hint="@string/verify_password"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp"
-            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"/>
+            app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo"
+            app:layout_constraintEnd_toEndOf="@+id/btn_capture_photo" android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp" android:layout_marginEnd="48dp" android:layout_marginRight="48dp"/>
     <Button
             android:id="@+id/registerBtn"
             android:text="@string/register"
@@ -165,7 +178,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/registerBtn"/>
 
 
 </android.support.constraint.ConstraintLayout>
