--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -10,7 +10,29 @@
     </style>
 
     <style name = "button_default" parent="Theme.AppCompat">
-        <item name = "android:background">@color/colorPrimaryDark</item>
-        <item name = "android:textColor">@color/colorSpearmint</item>
+        <item name = "android:textColor">@color/colorPrimaryDark</item>
+        <item name = "android:fontFamily">@font/rubik_regular</item>
     </style>
+
+    <style name = "button_apply_default" parent="Theme.AppCompat">
+        <item name = "android:textColor">@color/colorAccent</item>
+        <item name = "android:background">@color/colorPrimaryDark</item>
+        <item name = "android:fontFamily">@font/rubik_regular</item>
+        <item name ="android:radius">10dp</item>
+    </style>
+
+    <style name ="JobDetailScreenHeader" parent = "Theme.AppCompat">
+        <item name = "android:textSize" >30sp</item>
+        <item name = "android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name ="JobDetailScreenInfo" parent = "Theme.AppCompat">
+        <item name = "android:textSize" >18sp</item>
+        <item name = "android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+
 </resources>
