--- a/app/src/main/res/layout/mail_create.xml
+++ b/app/src/main/res/layout/mail_create.xml
@@ -10,16 +10,13 @@
     <LinearLayout
             android:id="@+id/activity_write_post"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
             android:orientation="vertical">
 
         <EditText
                 android:id="@+id/etReceiver"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/colorPrimaryDark"
@@ -28,7 +25,7 @@
 
         <EditText
                 android:id="@+id/etTitle"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="5dp"
                 android:layout_width="match_parent"
                 android:textColorHint="@color/colorPrimaryDark"
                 android:layout_height="wrap_content"
@@ -37,7 +34,7 @@
 
         <EditText
                 android:id="@+id/etBody"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/field_title"
@@ -52,7 +49,7 @@
                 android:layout_width="150dp"
                 android:textColor="@color/colorPrimaryDark"
                 android:background="@color/colorSpearmint"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="5dp"
                 android:layout_height="wrap_content"
                 android:onClick="sendClick"
                 android:text="Send"/>
@@ -62,32 +59,16 @@
                 android:layout_width="150dp"
                 android:textColor="@color/colorPrimaryDark"
                 android:background="@color/colorSpearmint"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="5dp"
                 android:layout_height="wrap_content"
                 android:text="Attach photo"/>
-
-        <Button
-                android:id="@+id/btnQR"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_marginVertical="10dp"
-                android:background="@color/colorSpearmint"
-                android:text="Scan QR Code"/>
 
         <ImageView
                 android:id="@+id/imgAttach"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="5dp"
                 android:visibility="gone"
                 android:scaleType="fitXY"/>
-
-        <me.dm7.barcodescanner.zxing.ZXingScannerView
-                android:id="@+id/zxingView"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_marginVertical="10dp"
-                android:layout_height="300dp"/>
     </LinearLayout>
 </ScrollView>
