--- a/app/src/main/res/layout/mail_create.xml
+++ b/app/src/main/res/layout/mail_create.xml
@@ -11,7 +11,7 @@
             android:id="@+id/activity_write_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="10dp"
             android:orientation="vertical">
 
         <EditText
@@ -44,31 +44,47 @@
                 android:maxLines="10"
                 android:scrollHorizontally="false"/>
 
-        <Button
-                android:id="@+id/btnSend"
-                android:layout_width="150dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@color/colorSpearmint"
-                android:layout_marginVertical="5dp"
+        <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="sendClick"
-                android:text="Send"/>
+                android:layout_gravity="center_horizontal"
+                android:weightSum="2">
 
-        <Button
-                android:id="@+id/btnAttach"
-                android:layout_width="150dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@color/colorSpearmint"
-                android:layout_marginVertical="5dp"
-                android:layout_height="wrap_content"
-                android:text="Attach photo"/>
+            <Button
+                    android:id="@+id/btnSend"
+                    android:layout_width="150dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="@color/colorSpearmint"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:onClick="sendClick"
+                    android:text="Send"/>
+
+            <Button
+                    android:id="@+id/btnAttach"
+                    android:layout_width="150dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="@color/colorSpearmint"
+                    android:layout_marginVertical="5dp"
+                    android:layout_weight="0"
+                    android:layout_height="wrap_content"
+                    android:text="Attach photo"/>
+
+        </LinearLayout>
+
 
         <ImageView
                 android:id="@+id/imgAttach"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginVertical="5dp"
+                android:layout_width="292dp"
+                android:layout_height="465dp"
+                android:scaleType="fitStart"
                 android:visibility="gone"
-                android:scaleType="fitXY"/>
+                android:layout_gravity="center_horizontal"
+                android:layout_marginVertical="5dp"
+
+        />
     </LinearLayout>
 </ScrollView>
