--- a/app/src/main/res/layout/mail_row.xml
+++ b/app/src/main/res/layout/mail_row.xml
@@ -15,66 +15,70 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:orientation="vertical"
+            android:padding="10dp"
             android:layout_alignParentStart="true">
 
         <TextView
                 android:id="@+id/tvDate"
-                android:layout_margin="10dp"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textStyle="bold"/>
 
         <TextView
                 android:id="@+id/tvAuthor"
-                android:layout_margin="10dp"
+                android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/tvReceiver"
+                android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_margin="10dp"
-
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"/>
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/tvTitle"
+                android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_margin="10dp"
-
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"/>
-
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/tvBody"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_margin="10dp"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-        <ImageView
-                android:id="@+id/ivPhoto"
-                android:visibility="gone"
-                android:layout_margin="10dp"
-                android:contentDescription="@string/image"
-                android:layout_width="70dp"
-                android:layout_height="70dp"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal">
+            <ImageView
+                    android:id="@+id/ivPhoto"
+                    android:visibility="gone"
+                    android:contentDescription="@string/image"
+                    android:layout_width="90dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitStart"
+                    android:layout_height="138dp"/>
+
+        </LinearLayout>
+
 
         <Button
                 android:id="@+id/btnDeleteMail"
-                android:background="@color/colorSpearmint"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_margin="10dp"
+                android:background="@color/colorPrimaryDark"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/delete"/>
