--- a/app/src/main/res/layout/mail_fragment.xml
+++ b/app/src/main/res/layout/mail_fragment.xml
@@ -18,7 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_message">
+
+            app:src="@drawable/ic_message">
 
     </android.support.design.widget.FloatingActionButton>
 
