--- a/app/src/main/res/layout/job_detail_layout.xml
+++ b/app/src/main/res/layout/job_detail_layout.xml
@@ -146,6 +146,10 @@
                 android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/tvJobInfoLocation"
                 app:layout_constraintHorizontal_bias="0.505"/>
 
+
+
+
+
         <!--<com.google.android.gms.maps.MapView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
@@ -154,6 +158,22 @@
         <!--android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"-->
         <!--app:layout_constraintTop_toBottomOf="@+id/textView5"/>-->
 
+        <ImageView
+                android:id="@+id/ivJobDetails"
+                android:contentDescription="@string/image"
+                android:layout_width="170dp"
+                android:scaleType="fitStart"
+                android:layout_height="282dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/btnJobApply"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
     </android.support.constraint.ConstraintLayout>
+
+
 
 </android.support.design.widget.CoordinatorLayout>
